--- a/spec/fixtures/test-project/Gemfile
+++ b/spec/fixtures/test-project/Gemfile
@@ -8,15 +8,15 @@ gem "foobara", git: "foobara", branch: "main"
 
 # gem "foobara-dotenv-loader", github: "foobara/dotenv-loader"
 # gem "foobara-dotenv-loader", path: "../dotenv-loader"
-# gem "foobara-rack-connector", github: "rack-connector", branch: "main"
-# gem "foobara-rack-connector", path: "..-connector", branch: "main"
+# gem "foobara-redis-crud-driver", github: "redis-crud-driver", branch: "main"
+# gem "foobara-redis-crud-driver", path: "..-connector", branch: "main"
 # gem "foobara-redis-crud-driver", github: "foobara/redis-crud-driver"
 # gem "foobara-redis-crud-driver", path: "../redis-crud-driver"
-# gem "foobara-rack-connector", github: "foobara/rack-connector"
-# gem "foobara-rack-connector", path: "../rack-connector"
-# gem "foobara-rack-connector", github: "foobara/rack-connector"
-# gem "foobara-rack-connector", path: "../rack-connector"
-# gem "foobara-rack-connector", github: "foobara/rack-connector"
+# gem "foobara-redis-crud-driver", github: "foobara/redis-crud-driver"
+# gem "foobara-redis-crud-driver", path: "../redis-crud-driver"
+# gem "foobara-redis-crud-driver", github: "foobara/redis-crud-driver"
+# gem "foobara-redis-crud-driver", path: "../redis-crud-driver"
+# gem "foobara-redis-crud-driver", github: "foobara/redis-crud-driver"
 # gem "foobara-sh-cli-connector", path: "../sh-cli-connector"
 gem "foobara-util", github: "foobara/util"
 # gem "foobara-util", path: "../util"
