--- a/spec/fixtures/test-project/Gemfile
+++ b/spec/fixtures/test-project/Gemfile
@@ -1,5 +1,5 @@
 source "https://rubygems.org"
-ruby File.read("#{__dir__}/.ruby-version")
+ruby ">= 3.4.0"
 
 gemspec
 
@@ -21,7 +21,7 @@ gem "rake"
 
 group :development do
   gem "foob"
-  gem "foobara-rubocop-rules", "~> 0.0.1"
+  gem "foobara-rubocop-rules", ">= 1.0.0"
   gem "guard-rspec"
   gem "rubocop-rake"
   gem "rubocop-rspec"
@@ -33,7 +33,7 @@ group :development, :test do
 end
 
 group :test do
-  gem "foobara-spec-helpers", "~> 0.0.1"
+  gem "foobara-spec-helpers", "< 2.0.0"
   gem "rspec"
   gem "rspec-its"
   gem "simplecov"
